# CompareItBackend

./: Cargo.toml  dockerfile  sqlx-data.json
migrations/: 0001_phones_table.sql
src/: main.rs  state.rs
src/api/: app.rs
src/controllers/: image_controller.rs  mod.rs  phone_controller.rs
src/database/: conn.rs
src/extractors/: authentication_token.rs
src/handlers/: auth_handler.rs  gpt_api_handler.rs  gpt_handler.rs  healthcheck_handler.rs  image_handler.rs  login_handler.rs  mod.rs  phone_handler.rs  token_handler.rs  user_handler.rs
src/models/: auth.rs  gpt_api.rs  image.rs  images.rs  insert_image_request.rs  mod.rs  phone.rs  phones.rs  token.rs  user.rs
src/modules/: change_phone_response.rs  gpt.rs  gpt_in_use.rs  insert_image.rs  insert_img.rs  jwt_token.rs  mod.rs  phone_response.rs  stock_image.rs
src/queries/: get_phone.sql  get_phone_by_id.sql  get_phones.sql  get_user_id.sql  get_user_password.sql  get_user_role.sql  insert_image.sql
src/routes/: routes.rs
src/tests/: unit_tests.rs
