[package]
name = "CompareItBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "runtime-actix-rustls", "macros"]}
serde = { version = "1.0.145", features = ["derive"]}
