[package]
name = "CompareItBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.7.0"
actix-rt = "2.10.0"
chrono = "0.4"
tokio = { version = "1.39.3", features = ["full"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "runtime-actix-rustls", "macros"]}
serde = { version = "1.0.209", features = ["derive"]}
config = "0.14.0"
dotenv = "0.15"
